--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,4 +2,18 @@
 
 body {
     background-color: orangered;
+    
+
+}
+h1 {
+    color:green;
+    font-family: 'Knewave', cursive;
+}
+h2 {
+    color: palegreen;
+    font-family: 'Knewave', cursive;
+}
+h3 {
+    color:rgb(163, 0, 0);
+    font-family: 'Knewave', cursive;
 }
