--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,3 +17,16 @@ h3 {
     color:rgb(163, 0, 0);
     font-family: 'Knewave', cursive;
 }
+.lettre
+{
+	float:left;
+	margin:4px;
+	text-align:center;
+	width:35px;
+	height:30px;
+	padding-top:5px;
+	background-color:#EDEEEE;
+	border:rgb(15, 92, 0) 1px solid;
+	-moz-border-radius: 3px;
+    -webkit-border-radius: 3px;	
+}
