--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,4 +16,17 @@ h3 {
   color: #a30000;
   font-family: 'Knewave', cursive;
 }
+
+.lettre {
+  float: left;
+  margin: 4px;
+  text-align: center;
+  width: 35px;
+  height: 30px;
+  padding-top: 5px;
+  background-color: #EDEEEE;
+  border: #0f5c00 1px solid;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
 /*# sourceMappingURL=style.css.map */
